[gd_scene load_steps=17 format=3 uid="uid://cydp4h0m80bfo"]

[ext_resource type="Script" path="res://scripts/ui/ruleset_menu.gd" id="1_by1lh"]
[ext_resource type="Texture2D" uid="uid://ylslyt8vdm8y" path="res://UI/Button Left Release.png" id="2_yv1ph"]
[ext_resource type="Texture2D" uid="uid://cmohjpb6kmjrq" path="res://UI/Button Left.png" id="3_30naf"]
[ext_resource type="Texture2D" uid="uid://dxfismcshmkmb" path="res://UI/Button Right Release.png" id="4_ldtut"]
[ext_resource type="Texture2D" uid="uid://d05tsy2jj1xmi" path="res://UI/Button Right.png" id="5_d6ggq"]
[ext_resource type="Texture2D" uid="uid://cc3oo6y6f5tgi" path="res://UI/layout_finkel.png" id="7_kfq2g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdsbs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_11svl"]
texture = ExtResource("2_yv1ph")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hne6e"]
texture = ExtResource("2_yv1ph")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u2dfi"]
texture = ExtResource("3_30naf")

[sub_resource type="Theme" id="Theme_2vafe"]
Button/styles/focus = SubResource("StyleBoxEmpty_xdsbs")
Button/styles/hover = SubResource("StyleBoxTexture_11svl")
Button/styles/normal = SubResource("StyleBoxTexture_hne6e")
Button/styles/pressed = SubResource("StyleBoxTexture_u2dfi")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g0k1q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y0pk2"]
texture = ExtResource("4_ldtut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cudxt"]
texture = ExtResource("4_ldtut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7xnd5"]
texture = ExtResource("5_d6ggq")

[sub_resource type="Theme" id="Theme_npdws"]
Button/styles/focus = SubResource("StyleBoxEmpty_g0k1q")
Button/styles/hover = SubResource("StyleBoxTexture_y0pk2")
Button/styles/normal = SubResource("StyleBoxTexture_cudxt")
Button/styles/pressed = SubResource("StyleBoxTexture_7xnd5")

[node name="RulesetMenu" type="CanvasLayer" node_paths=PackedStringArray("ruleset_name_label", "board_layout_image", "board_name_label", "rule_1_check_box", "rule_2_check_box", "rule_3_check_box", "rule_4_check_box", "rule_5_check_box", "piece_number_slider", "piece_number_label", "dice_number_slider", "dice_number_label")]
script = ExtResource("1_by1lh")
ruleset_name_label = NodePath("Control/TabletFrame/RulesetPicker/RulesetNameLabel")
board_layout_image = NodePath("Control/TabletFrame/BoardPicker/BoardLayoutImage")
board_name_label = NodePath("Control/TabletFrame/BoardPicker/BoardNameLabel")
rule_1_check_box = NodePath("Control/TabletFrame/RulesList/Rule1CheckBox")
rule_2_check_box = NodePath("Control/TabletFrame/RulesList/Rule2CheckBox")
rule_3_check_box = NodePath("Control/TabletFrame/RulesList/Rule3CheckBox")
rule_4_check_box = NodePath("Control/TabletFrame/RulesList/Rule4CheckBox")
rule_5_check_box = NodePath("Control/TabletFrame/RulesList/Rule5CheckBox")
piece_number_slider = NodePath("Control/TabletFrame/Sliders/PieceNumberSlider")
piece_number_label = NodePath("Control/TabletFrame/Sliders/PieceNumberSlider/PieceNumberLabel")
dice_number_slider = NodePath("Control/TabletFrame/Sliders/DiceNumberSlider")
dice_number_label = NodePath("Control/TabletFrame/Sliders/DiceNumberSlider/DiceNumberLabel")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabletFrame" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -500.0
offset_right = 350.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="RulesetPicker" type="Control" parent="Control/TabletFrame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -265.0
offset_top = 77.0
offset_right = 289.0
offset_bottom = 159.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="SwitchRulesetLeftButton" type="Button" parent="Control/TabletFrame/RulesetPicker"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -35.0
offset_right = 70.0
offset_bottom = 35.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_2vafe")

[node name="RulesetNameLabel" type="Label" parent="Control/TabletFrame/RulesetPicker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -41.0
offset_right = 199.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 55
text = "Rule Set Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SwitchRulesetRightButton" type="Button" parent="Control/TabletFrame/RulesetPicker"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -35.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_npdws")

[node name="BoardPicker" type="Control" parent="Control/TabletFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.0
offset_top = -344.0
offset_right = 292.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="SwitchBoardLeftButton" type="Button" parent="Control/TabletFrame/BoardPicker"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -34.5
offset_right = 64.0
offset_bottom = 34.5
grow_vertical = 2
scale = Vector2(1.25, 1.25)
theme = SubResource("Theme_2vafe")

[node name="BoardLayoutImage" type="TextureRect" parent="Control/TabletFrame/BoardPicker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -90.0
offset_right = 197.5
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_kfq2g")
expand_mode = 2
stretch_mode = 5

[node name="SwitchBoardRightButton" type="Button" parent="Control/TabletFrame/BoardPicker"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -34.5
offset_bottom = 34.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.25, 1.25)
theme = SubResource("Theme_npdws")

[node name="BoardNameLabel" type="Label" parent="Control/TabletFrame/BoardPicker"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -41.0
offset_right = 74.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Map Name"
horizontal_alignment = 1

[node name="RulesList" type="VBoxContainer" parent="Control/TabletFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.0
offset_top = -62.0
offset_right = 2.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Rule1CheckBox" type="CheckBox" parent="Control/TabletFrame/RulesList"]
layout_mode = 2
focus_mode = 0
text = "Rosettes are safe
"

[node name="Rule2CheckBox" type="CheckBox" parent="Control/TabletFrame/RulesList"]
layout_mode = 2
focus_mode = 0
text = "Rosettes grant extra roll"

[node name="Rule3CheckBox" type="CheckBox" parent="Control/TabletFrame/RulesList"]
layout_mode = 2
focus_mode = 0
text = "Rosettes allow stacking"

[node name="Rule4CheckBox" type="CheckBox" parent="Control/TabletFrame/RulesList"]
layout_mode = 2
focus_mode = 0
text = "Capture grants an extra roll"

[node name="Rule5CheckBox" type="CheckBox" parent="Control/TabletFrame/RulesList"]
layout_mode = 2
focus_mode = 0
text = "Pieces can move backwards"

[node name="Sliders" type="VBoxContainer" parent="Control/TabletFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.0
offset_top = 190.0
offset_right = 5.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="PieceNumberSlider" type="HSlider" parent="Control/TabletFrame/Sliders"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
focus_mode = 0
min_value = 1.0
max_value = 7.0
value = 1.0
rounded = true
tick_count = 7
ticks_on_borders = true

[node name="PieceNumberLabel" type="Label" parent="Control/TabletFrame/Sliders/PieceNumberSlider"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -20.0
offset_right = 180.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1 Total pices"
vertical_alignment = 1

[node name="DiceNumberSlider" type="HSlider" parent="Control/TabletFrame/Sliders"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
focus_mode = 0
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="DiceNumberLabel" type="Label" parent="Control/TabletFrame/Sliders/DiceNumberSlider"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -20.0
offset_right = 170.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1 Total dice
"
vertical_alignment = 1

[node name="ResetButton" type="Button" parent="Control/TabletFrame"]
layout_mode = 0
offset_left = 74.0
offset_top = 790.0
offset_right = 150.0
offset_bottom = 841.0
theme_override_font_sizes/font_size = 28
text = "Reset"
flat = true

[node name="ConfirmButton" type="Button" parent="Control/TabletFrame"]
layout_mode = 0
offset_left = 411.0
offset_top = 844.0
offset_right = 635.0
offset_bottom = 936.0
theme_override_font_sizes/font_size = 48
text = "Confirm"
flat = true

[node name="BackButton" type="Button" parent="Control/TabletFrame"]
layout_mode = 0
offset_left = 294.0
offset_top = 859.0
offset_right = 403.0
offset_bottom = 914.0
theme_override_font_sizes/font_size = 35
text = "Back"
flat = true

[connection signal="pressed" from="Control/TabletFrame/RulesetPicker/SwitchRulesetLeftButton" to="." method="_on_switch_ruleset_left_button_pressed"]
[connection signal="pressed" from="Control/TabletFrame/RulesetPicker/SwitchRulesetRightButton" to="." method="_on_switch_ruleset_right_button_pressed"]
[connection signal="pressed" from="Control/TabletFrame/BoardPicker/SwitchBoardLeftButton" to="." method="_on_switch_board_left_button_pressed"]
[connection signal="pressed" from="Control/TabletFrame/BoardPicker/SwitchBoardRightButton" to="." method="_on_switch_board_right_button_pressed"]
[connection signal="toggled" from="Control/TabletFrame/RulesList/Rule1CheckBox" to="." method="_on_rule_1_check_box_toggled"]
[connection signal="toggled" from="Control/TabletFrame/RulesList/Rule2CheckBox" to="." method="_on_rule_2_check_box_toggled"]
[connection signal="toggled" from="Control/TabletFrame/RulesList/Rule3CheckBox" to="." method="_on_rule_3_check_box_toggled"]
[connection signal="toggled" from="Control/TabletFrame/RulesList/Rule4CheckBox" to="." method="_on_rule_4_check_box_toggled"]
[connection signal="toggled" from="Control/TabletFrame/RulesList/Rule5CheckBox" to="." method="_on_rule_5_check_box_toggled"]
[connection signal="value_changed" from="Control/TabletFrame/Sliders/PieceNumberSlider" to="." method="_on_piece_number_slider_value_changed"]
[connection signal="value_changed" from="Control/TabletFrame/Sliders/DiceNumberSlider" to="." method="_on_dice_number_slider_value_changed"]
[connection signal="pressed" from="Control/TabletFrame/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Control/TabletFrame/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Control/TabletFrame/BackButton" to="." method="_on_back_button_pressed"]
